Fixed buttons on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -60,8 +60,7 @@
 		.button
 		{
 			position: relative;
-			padding: 0.65em 0 0.65em 0 !important;
-			width: 100%;
+			padding: 0.65em 0.65em 0.65em 0.65em !important;
 			text-align: center;
 			font-size: 1.25em;
 			margin: 0.25em 0 0.25em 0;
